{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 10,
  "lineage": "6c7f0621-46c0-53bb-1ec9-10423fbb7829",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "east_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07860a2d7eb515d9a",
            "arn": "arn:aws:ec2:us-east-1:806700449883:instance/i-02829a40ee97fe323",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02829a40ee97fe323",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a0415b94307cd7f3"
              }
            ],
            "primary_network_interface_id": "eni-0a0415b94307cd7f3",
            "private_dns": "ip-10-1-1-144.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.144",
            "public_dns": "ec2-44-199-233-6.compute-1.amazonaws.com",
            "public_ip": "44.199.233.6",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-028b0849b766aabda",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04d25e57b5f96174f",
            "tags": {
              "Name": "east-ec2"
            },
            "tags_all": {
              "Name": "east-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b807ed46724280d2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "806700449883",
            "id": "i-02829a40ee97fe323",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.east_sg",
            "aws_subnet.east_subnet",
            "aws_vpc.east_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "south_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].south",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00af95fa354fdb788",
            "arn": "arn:aws:ec2:ap-south-1:806700449883:instance/i-0c902c856b6857a61",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c902c856b6857a61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a7b0101e186aa6c9"
              }
            ],
            "primary_network_interface_id": "eni-0a7b0101e186aa6c9",
            "private_dns": "ip-10-0-1-157.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.157",
            "public_dns": "ec2-13-201-12-34.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.201.12.34",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03987700de35452ab",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-038f56b3c09de0bd3",
            "tags": {
              "Name": "south-ec2"
            },
            "tags_all": {
              "Name": "south-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a13081104b5b7273"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "806700449883",
            "id": "i-0c902c856b6857a61",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_security_group.south_sg",
            "aws_subnet.south_subnet",
            "aws_vpc.south_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "east_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:806700449883:security-group/sg-0b807ed46724280d2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b807ed46724280d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20251028162938260900000001",
            "name_prefix": "terraform-",
            "owner_id": "806700449883",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "east-sg"
            },
            "tags_all": {
              "Name": "east-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf8141f14df6909a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "806700449883",
            "id": "sg-0b807ed46724280d2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.east_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "south_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].south",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:806700449883:security-group/sg-0a13081104b5b7273",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a13081104b5b7273",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20251028162933295600000001",
            "name_prefix": "terraform-",
            "owner_id": "806700449883",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "south-sg"
            },
            "tags_all": {
              "Name": "south-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f17e8ba1b6c74b6f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "806700449883",
            "id": "sg-0a13081104b5b7273",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.south_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "east_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:806700449883:subnet/subnet-04d25e57b5f96174f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d25e57b5f96174f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "806700449883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "east-subnet"
            },
            "tags_all": {
              "Name": "east-subnet"
            },
            "vpc_id": "vpc-0cf8141f14df6909a"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "806700449883",
            "id": "subnet-04d25e57b5f96174f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.east_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "south_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].south",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:806700449883:subnet/subnet-038f56b3c09de0bd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038f56b3c09de0bd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "806700449883",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "south-subnet"
            },
            "tags_all": {
              "Name": "south-subnet"
            },
            "vpc_id": "vpc-0f17e8ba1b6c74b6f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "806700449883",
            "id": "subnet-038f56b3c09de0bd3",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.south_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "east_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].east",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:806700449883:vpc/vpc-0cf8141f14df6909a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0456b62afd2c801bd",
            "default_route_table_id": "rtb-09e285365f63bc4e8",
            "default_security_group_id": "sg-038f6f3a310859db4",
            "dhcp_options_id": "dopt-085e31f7619c7ccf0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf8141f14df6909a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09e285365f63bc4e8",
            "owner_id": "806700449883",
            "region": "us-east-1",
            "tags": {
              "Name": "east-vpc"
            },
            "tags_all": {
              "Name": "east-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "806700449883",
            "id": "vpc-0cf8141f14df6909a",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "south_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].south",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:806700449883:vpc/vpc-0f17e8ba1b6c74b6f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0259dbb3f462d09f5",
            "default_route_table_id": "rtb-0cc19f2bcc46ac95d",
            "default_security_group_id": "sg-0c782d878ef4cface",
            "dhcp_options_id": "dopt-0ce1bb7615b816b7f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f17e8ba1b6c74b6f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cc19f2bcc46ac95d",
            "owner_id": "806700449883",
            "region": "ap-south-1",
            "tags": {
              "Name": "south-vpc"
            },
            "tags_all": {
              "Name": "south-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "806700449883",
            "id": "vpc-0f17e8ba1b6c74b6f",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}